fix: Header items aligning

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -31,6 +31,7 @@
 .header__menu {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 32px;
 }
 
